--- a/staff/style_STAFF.css
+++ b/staff/style_STAFF.css
@@ -436,8 +436,9 @@ nav .profile-details i{
 /**Travel Form**/
 .container{
     position: relative;
-    max-width: 900px;
+    max-width: 2000px;
     width: 100%;
+    height:100%;
     border-radius: 6px;
     padding: 30px;
     background-color: #fff;
@@ -464,23 +465,26 @@ nav .profile-details i{
 .container form{
     position: relative;
     margin-top: 16px;
-    min-height: 900px;
+    min-height: 1500px;
     background-color: #fff;
-    overflow: hidden;
+    overflow-y: scroll;
 }
 .container form .form{
     position: absolute;
     background-color: #fff;
     transition: 0.3s ease;
 }
-
-
+form.secActive .form.first{
+    opacity: 0;
+    pointer-events: none;
+    transform: translateX(-100%);
+}
 .container form .title{
     display: block;
-    margin-bottom: 8px;
-    font-size: 16px;
+    margin-bottom: 10px;
+    font-size: 18px;
     font-weight: 500;
-    margin: 3px 0;
+    margin: 6px 0;
     color: #333;
 }
 .container form .fields{
@@ -488,29 +492,14 @@ nav .profile-details i{
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-}
-
-.container form .DTE{
-  margin: 15px 0px 0px 0px;
-  
-}
-
-.container form .DTE .line{
-   border-top: 2px solid #a7a9ac;
-   margin-bottom:10px;
   
 }
 form .fields .input-field1{
     display: flex;
     width: calc(100% / 2 - 15px);
     flex-direction: column;
-    margin: 2px 0;
-
-}
-
-form .fields .input-field1 .oth{
-  width:100%;
-  
+    margin: 4px 0;
+    font-size: 15px; /* FONT SIZE*/
 }
 
 form .fields .input-field2{
@@ -520,27 +509,33 @@ form .fields .input-field2{
     margin: 4px 0;
 }
 
-.container .input-field label{
-    font-size: 12px;
-    font-weight: 500;
+.input-field label{
+    font-size: 15px;
+    font-weight: 400;
     color: #2e2e2e;
 }
-.container .input-field input, select{
+.input-field input, select{
     outline: none;
-    font-size: 14px;
+    font-size: 15px;
     font-weight: 400;
     color: #333;
     border-radius: 5px;
-    border: 1px solid #aaa;
+    border-bottom: 1px solid #aaa;
     padding: 0 15px;
-    height: 42px;
+    height: 37px;
     margin: 8px 0;
 }
-.container .input-field input :focus,
-.container .input-field select:focus{
+.input-field input :focus,
+.input-field select:focus{
     box-shadow: 0 3px 6px rgba(0,0,0,0.13);
 }
-
+.input-field select,
+.input-field input[type="date"]{
+    color: #707070;
+}
+.input-field input[type="date"]:valid{
+    color: #333;
+}
 .container form button, .backBtn{
     display: flex;
     align-items: center;
@@ -612,7 +607,33 @@ form .buttons{
     width: 100%;
     float:right;
 }
+
+@media (max-width: 750px) {
+    .container form{
+        overflow-y: scroll;
+    }
+    .container form::-webkit-scrollbar{
+       display: none;
+     
+    }
+  .container form{margin-right:0px;}
+  
+    form .fields .input-field{
+        width: calc(100% / 3 - 15px);
+    }
+}
+
+@media (max-width: 550px) {
+    form .fields .input-field1{
+        width: 100%;
+    }
+  form .fields .input-field2{
+        width: 100%;
+    }
+}
+
 /** End-Travel Form**/
+
 
 .home-section .home-content{
   position: relative;
@@ -1100,18 +1121,6 @@ input{
     }
 }
 
-@media (max-width: 550px) {
-    form .fields .input-field1{
-        width: 100%;
-    }
-  form .fields .input-field2{
-        width: 50%;
-    
-    display: flex;
-    width: calc(100% / 3 - 30px);
-    flex-direction: column;
-    margin: 4px 0;
-    font-size: 10px;
-  }
-}
+
+
  
