--- a/hr/style_HR.css
+++ b/hr/style_HR.css
@@ -6,7 +6,76 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
-
+/* Fixed sidenav, full height */
+.sidenav {
+  height: 100%;
+  width: 300px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+  padding-top: 90px;
+}
+/* Style the sidenav links and the dropdown button */
+.sidenav i{
+  min-width: 60px;
+  text-align: center;
+  font-size: 18px;
+  color: #fff;
+}
+.sidenav a .links_name{
+  color: #fff;
+  font-size: 15px;
+  font-weight: 400;
+  white-space: nowrap;
+}
+.sidenav a:hover{
+  background: #081D45;
+  text-decoration: none;
+}
+.sidenav .dropdown-btn:hover{
+  background: #081D45;
+  text-decoration: none;
+}
+.sidenav .dropdown-container a{
+  background: #081D45;
+  text-decoration: none;
+  padding-left: 60px;
+}
+.sidenav .dropdown-container a:hover{
+  background: #163a7c;
+  text-decoration: none;
+}
+.sidenav a, .dropdown-btn {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 15px;
+  color: #ffffff;
+  display: flex;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
+  padding-top:20px;
+  padding-left:5px;
+  align-items: center;
+  text-decoration: none;
+  cursor: pointer;
+  outline: none;
+}
+/* On mouse-over */
+.sidenav a:hover, .dropdown-btn:hover {
+  color: #f1f1f1;
+}
+/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
+.dropdown-container {
+  display: none;
+}
+/* Optional: Style the caret down icon */
+.fa-caret-down {
+  float: right;
+}
 .logo-details img{
   width:50px;
   margin-top:20px;
@@ -79,11 +148,12 @@
   font-weight: 400;
   white-space: nowrap;
 }
-.sidebar .nav-links .log_out{
-  position: absolute;
+.sidebar .log_out{
+  position: relative;
   bottom: 0;
   width: 100%;
 }
+
 .home-section{
   position: relative;
   background: #f5f5f5;
@@ -466,7 +536,8 @@ nav .profile-details i{
     margin-top: 16px;
     min-height: 900px;
     background-color: #fff;
-    overflow: hidden;
+    overflow-y: hidden;
+    overflow-y: scroll;
 }
 .container form .form{
     position: absolute;
@@ -607,7 +678,7 @@ form .buttons .reset:active{
 
 form .buttons{
     display: flex;
-    text-align: : center;
+    text-align: center;
     max-width: 200px;
     width: 100%;
     float:right;
@@ -1114,4 +1185,4 @@ input{
     font-size: 10px;
   }
 }
- 
+}}
