--- a/staff/style_STAFF.css
+++ b/staff/style_STAFF.css
@@ -84,6 +84,28 @@
   bottom: 0;
   width: 100%;
 }
+/* Dropdown Side bar menu */
+
+.sidenav .dropdown-container a{
+  text-decoration: none;
+  padding-left: 60px;
+  height:100px;
+}
+
+/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
+.dropdown-container {
+  display: none;
+  height:40px;
+  color:black;
+}
+div .dropdown-container a{
+  background: #0f2a5c;
+}
+
+.sidenav .nav-links li.show i.arrow {
+  transform: rotate(-180deg);
+}
+
 .home-section{
   position: relative;
   background: #f5f5f5;
@@ -466,7 +488,8 @@ nav .profile-details i{
     margin-top: 16px;
     min-height: 900px;
     background-color: #fff;
-    overflow: hidden;
+    overflow-y: hidden;
+    overflow-y: scroll;
 }
 .container form .form{
     position: absolute;
@@ -607,10 +630,10 @@ form .buttons .reset:active{
 
 form .buttons{
     display: flex;
-    text-align: center;
+    text-align: : center;
     max-width: 200px;
     width: 100%;
-    float: right;
+    float:right;
 }
 /** End-Travel Form**/
 
